jenkins-backup/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name : my-deployment
  labels:
    mahi: laavya
spec:
  replicas: 2
  template:
    metadata:
      labels:
        env: pord
    spec:
      containers:
        - name: jenkins
          image: jenkins:2.60.3
          ports:
            - containerPort: 8080
