jenkins-backup/deployment1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name : my-deployment-1
  labels:
    mahi: laavya
spec:
  replicas: 2
  selector:
    matchLabels:
      ajay: jayswal
  template:
    metadata:
      labels:
        ajay: jayswal
    spec:
      containers:
        - name: jenkins
          image: jenkins:2.60.3
          ports:
            - containerPort: 8080
