jenkins-backup/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - jenkins.twc-oap-cluster.us-south.containers.appdomain.cloud
    secretName: twc-oap-cluster
  rules:
  - host: jenkins.twc-oap-cluster.us-south.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
